--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	fastled/FastLED@^3.4.0
+	adafruit/Adafruit NeoPixel@^1.10.1
+	bblanchon/ArduinoJson@^6.18.5
